[fix] set packable to false; dont want to publish this package yet

--- a/source/SimpleReports/TinyToml/TinyToml.csproj
+++ b/source/SimpleReports/TinyToml/TinyToml.csproj
@@ -14,7 +14,8 @@
         <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
         <LangVersion>latest</LangVersion>
 
-        
+        <IsPackable>false</IsPackable>
+
     </PropertyGroup>
 
     <PropertyGroup>
