--- a/source/SimpleReports/Ruzzie.SimpleReports/Ruzzie.SimpleReports.csproj
+++ b/source/SimpleReports/Ruzzie.SimpleReports/Ruzzie.SimpleReports.csproj
@@ -12,6 +12,8 @@
         <LangVersion>latest</LangVersion>
         <GenerateDocumentationFile>true</GenerateDocumentationFile>
         <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
+        <IncludeSymbols>true</IncludeSymbols>
+        <SymbolPackageFormat>snupkg</SymbolPackageFormat>
     </PropertyGroup>
 
     <PropertyGroup>
