--- a/source/SimpleReports/TinyToml/TinyToml.csproj
+++ b/source/SimpleReports/TinyToml/TinyToml.csproj
@@ -22,6 +22,14 @@
       <NoWarn>1701;1702;1591;</NoWarn>
     </PropertyGroup>
 
+    <PropertyGroup Condition=" '$(Configuration)' == 'Debug' ">
+        <DocumentationFile>bin\Debug\Ruzzie.SimpleReports.xml</DocumentationFile>
+    </PropertyGroup>
+
+    <PropertyGroup Condition=" '$(Configuration)' == 'Release' ">
+        <DebugSymbols>true</DebugSymbols>
+        <DocumentationFile>bin\Release\Ruzzie.SimpleReports.xml</DocumentationFile>
+    </PropertyGroup>
     <ItemGroup>
         <AssemblyAttribute Include="System.Runtime.CompilerServices.InternalsVisibleTo">
             <_Parameter1>$(AssemblyName).UnitTests</_Parameter1>
