--- a/source/SimpleReports/Ruzzie.SimpleReports.UnitTests/Ruzzie.SimpleReports.UnitTests.csproj
+++ b/source/SimpleReports/Ruzzie.SimpleReports.UnitTests/Ruzzie.SimpleReports.UnitTests.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-        <TargetFramework>net6.0</TargetFramework>
+        <TargetFrameworks>net6.0;net8.0</TargetFrameworks>
 
         <IsPackable>false</IsPackable>
 
@@ -11,11 +11,11 @@
     <ItemGroup>
         <PackageReference Include="FluentAssertions" Version="6.8.0" />
         <PackageReference Include="FsCheck.Nunit" Version="2.16.5" />
-        <PackageReference Include="Microsoft.Data.Sqlite" Version="7.0.0" />
+        <PackageReference Include="Microsoft.Data.Sqlite" Version="8.0.7" />
         <PackageReference Include="Moq" Version="4.18.3" />
-        <PackageReference Include="NUnit" Version="3.13.3" />
-        <PackageReference Include="NUnit3TestAdapter" Version="4.3.1" />
-        <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.4.0" />
+        <PackageReference Include="NUnit" Version="3.14.0" />
+        <PackageReference Include="NUnit3TestAdapter" Version="4.5.0" />
+        <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.10.0" />
     </ItemGroup>
 
     <ItemGroup>
