--- a/source/SimpleReports/Ruzzie.SimpleReports/Ruzzie.SimpleReports.csproj
+++ b/source/SimpleReports/Ruzzie.SimpleReports/Ruzzie.SimpleReports.csproj
@@ -3,10 +3,10 @@
     <PropertyGroup>
         <Title>Ruzzie's SimpleReports</Title>
         <Description>A very simple and basic report engine based on reports defined in a config file.</Description>
-        <TargetFrameworks>net6.0;netstandard2.1</TargetFrameworks>
+        <TargetFrameworks>net6.0;net8.0</TargetFrameworks>
         <Authors>Dorus Verhoeckx</Authors>
         <Company>D Crafting</Company>
-        <Copyright>Copyright © Dorus Verhoeckx 2020-2021</Copyright>
+        <Copyright>Copyright © Dorus Verhoeckx 2020-2024</Copyright>
         <Version>0.0.1</Version>
         <Nullable>enable</Nullable>
         <LangVersion>default</LangVersion>
@@ -30,8 +30,8 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <PackageReference Include="CsvHelper" Version="30.0.1" />
-      <PackageReference Include="Ruzzie.Common.Types" Version="0.0.19.50" />
+      <PackageReference Include="CsvHelper" Version="33.0.1" />
+      <PackageReference Include="Ruzzie.Common.Types" Version="0.2.0.58" />
     </ItemGroup>
 
     <!-- INCLUDE SOURCE OF TINY TOML PARSER, SUCH THAT IT IS PACKED IN THE PUBLISHED DLL -->
