--- a/source/SimpleReports/TinyToml.UnitTests/TinyToml.UnitTests.csproj
+++ b/source/SimpleReports/TinyToml.UnitTests/TinyToml.UnitTests.csproj
@@ -4,16 +4,16 @@
 
         <IsPackable>false</IsPackable>
 
-        <TargetFrameworks>net6.0;netcoreapp3.1</TargetFrameworks>
+        <TargetFrameworks>net6.0;net8.0</TargetFrameworks>
 
         <LangVersion>default</LangVersion>
     </PropertyGroup>
 
     <ItemGroup>
         <PackageReference Include="FluentAssertions" Version="6.8.0" />
-        <PackageReference Include="NUnit" Version="3.13.3" />
-        <PackageReference Include="NUnit3TestAdapter" Version="4.3.1" />
-        <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.4.0" />
+        <PackageReference Include="NUnit" Version="3.14.0" />
+        <PackageReference Include="NUnit3TestAdapter" Version="4.5.0" />
+        <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.10.0" />
     </ItemGroup>
 
     <ItemGroup>
