--- a/source/SimpleReports/TinyToml/TinyToml.csproj
+++ b/source/SimpleReports/TinyToml/TinyToml.csproj
@@ -9,7 +9,7 @@
         <Copyright>Copyright © Dorus Verhoeckx 2020, 2021</Copyright>
         <PackageLicenseExpression>Unlicense</PackageLicenseExpression>
         <Version>0.0.1</Version>
-        <TargetFrameworks>net6.0;netstandard2.1</TargetFrameworks>
+        <TargetFrameworks>net6.0;net8.0</TargetFrameworks>
         <Nullable>enable</Nullable>
         <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
         <LangVersion>latest</LangVersion>
